Added arxiv paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
- 
+@article{merlo2025real,
+  title={Real-Time High-Accuracy Digital Wireless Time, Frequency, and Phase Calibration For Coherent Distributed Antenna Arrays},
+  author={Merlo, Jason M and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A},
+  journal={arXiv preprint arXiv:2506.07267},
+  year={2025},
+  abstract = {This work presents a fully-digital high-accuracy real-time calibration procedure for frequency and time alignment of open-loop wirelessly coordinated coherent distributed antenna array (CDA) modems, enabling RF phase coherence of spatially separated commercial off-the-shelf (COTS) software-defined radios (SDRs) without any cables or external references such as global navigation satellite system (GNSS). Building on previous work using high-accuracy spectrally-sparse time of arrival (ToA) waveforms and a multi-step ToA refinement process, a high-accuracy two-way time transfer (TWTT)-based time-frequency coordination approach is demonstrated. By using a high-accuracy time estimation approach, frequency estimates can be derived over long observation intervals leading to a high-accuracy frequency estimate, without the requirement for long pulse durations as is required for direct spectral frequency estimation techniques, minimizing coordination overhead. Furthermore, due to the two-way nature of the high-accuracy TWTT approach, the time and frequency estimates are Doppler and multi-path tolerant, so long as the channel is reciprocal over the synchronization epoch. This technique is experimentally verified by demonstrating wireless distributed array coordination using COTS SDRs in a lab environment in static and dynamic scenarios and with significant multipath scatterers. Time, frequency, and phase stability were measured over coaxial cables to an oscilloscope and achieved time and phase coordination precision of ~60-70 ps, with median coherent gains above 99% using optimized parameters, and a beamforming frequency RMSE of 3.73 ppb in a dynamic scenario. Finally, experiments are conducted to compare the performance of this technique with previous work works using an analog continuous-wave two-tone (CWTT) frequency reference technique in both static and dynamic settings as a benchmark.},
+  arxiv = {2506.07267},
+}
+
 @inproceedings{merlo2024past,
 	abbr = {IEEE PAST},
 	abstract = {In this work we experimentally demonstrate a wirelessly coordinated three-element coherent distributed phased array performing beamforming and beam steering to a target in the far-field over 17 m at a carrier frequency of 1.05 GHz. We build on our previous work utilizing a high accuracy two-way time transfer (TWTT) technique for inter-node time synchronization and ranging and an analog continuous two-tone frequency transfer technique to perform syntonization by moving to a fully wireless architecture, without the need for external reference signals such as global navigation satellite system (GNSS)-derived pulse-per-second (PPS), including a distributed computing system architecture, and the use of fully wireless communication links between nodes. Finally, we perform a far-field beamforming experiment with beam steering to a receiver 17 m away at a carrier frequency of 1.05 GHz and demonstrate a beamforming coherent gain of 0.95 (9.32 dB) with a beamforming inter-element timing accuracy of below 60 ps.},
