--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,16 @@
   arxiv = {2506.07267},
 }
 
+@article{merlo2025real,
+  title={Collaborative Beamforming for Communication Applications Using a Two-Element Fully-Wireless Open-Loop Coherent Distributed Array},
+  author={Merlo, Jason M and Nanzer, Jeffrey A},
+  journal={arXiv preprint arXiv:2506.13014},
+  year={2025},
+  abstract = {In this work we demonstrate a proof of concept of a fully-wireless two-node open-loop coherent distributed communication system and evaluate its performance by transmitting QPSK , 64-, and 256-QAM constellations at a symbol rate of 2 MBd over a 58 m link in an urban environment. The system is implemented in a distributed manner with on-node processing using software-defined radios (SDRs) and wireless internode communication to share coordination information and does not rely on external time or frequency references such as the global navigation satellite system (GNSS). In each experiment ~100 messages were transmitted and a mean coherent gain of 0.936 was achieved across all measurements with a mean symbol error ratio of below 1.4e10^−4 achieved up to 64-QAM, demonstrating a reliable bandwidth of up to 12 Mbps.},
+  arxiv = {2506.13014},
+}
+
+
 @inproceedings{merlo2024past,
 	abbr = {IEEE PAST},
 	abstract = {In this work we experimentally demonstrate a wirelessly coordinated three-element coherent distributed phased array performing beamforming and beam steering to a target in the far-field over 17 m at a carrier frequency of 1.05 GHz. We build on our previous work utilizing a high accuracy two-way time transfer (TWTT) technique for inter-node time synchronization and ranging and an analog continuous two-tone frequency transfer technique to perform syntonization by moving to a fully wireless architecture, without the need for external reference signals such as global navigation satellite system (GNSS)-derived pulse-per-second (PPS), including a distributed computing system architecture, and the use of fully wireless communication links between nodes. Finally, we perform a far-field beamforming experiment with beam steering to a receiver 17 m away at a carrier frequency of 1.05 GHz and demonstrate a beamforming coherent gain of 0.95 (9.32 dB) with a beamforming inter-element timing accuracy of below 60 ps.},
