--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,20 +8,22 @@
 
 @article{merlo2025real,
   title={Real-Time High-Accuracy Digital Wireless Time, Frequency, and Phase Calibration For Coherent Distributed Antenna Arrays},
-  author={Merlo, Jason M and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A},
+  author={Merlo, Jason M and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
   journal={arXiv preprint arXiv:2506.07267},
   year={2025},
   abstract = {This work presents a fully-digital high-accuracy real-time calibration procedure for frequency and time alignment of open-loop wirelessly coordinated coherent distributed antenna array (CDA) modems, enabling RF phase coherence of spatially separated commercial off-the-shelf (COTS) software-defined radios (SDRs) without any cables or external references such as global navigation satellite system (GNSS). Building on previous work using high-accuracy spectrally-sparse time of arrival (ToA) waveforms and a multi-step ToA refinement process, a high-accuracy two-way time transfer (TWTT)-based time-frequency coordination approach is demonstrated. By using a high-accuracy time estimation approach, frequency estimates can be derived over long observation intervals leading to a high-accuracy frequency estimate, without the requirement for long pulse durations as is required for direct spectral frequency estimation techniques, minimizing coordination overhead. Furthermore, due to the two-way nature of the high-accuracy TWTT approach, the time and frequency estimates are Doppler and multi-path tolerant, so long as the channel is reciprocal over the synchronization epoch. This technique is experimentally verified by demonstrating wireless distributed array coordination using COTS SDRs in a lab environment in static and dynamic scenarios and with significant multipath scatterers. Time, frequency, and phase stability were measured over coaxial cables to an oscilloscope and achieved time and phase coordination precision of ~60-70 ps, with median coherent gains above 99% using optimized parameters, and a beamforming frequency RMSE of 3.73 ppb in a dynamic scenario. Finally, experiments are conducted to compare the performance of this technique with previous work works using an analog continuous-wave two-tone (CWTT) frequency reference technique in both static and dynamic settings as a benchmark.},
   arxiv = {2506.07267},
+  abbr = {Preprint},
 }
 
-@article{merlo2025real,
+@article{merlo2025collaborative,
   title={Collaborative Beamforming for Communication Applications Using a Two-Element Fully-Wireless Open-Loop Coherent Distributed Array},
-  author={Merlo, Jason M and Nanzer, Jeffrey A},
+  author={Merlo, Jason M and Nanzer, Jeffrey A.},
   journal={arXiv preprint arXiv:2506.13014},
   year={2025},
   abstract = {In this work we demonstrate a proof of concept of a fully-wireless two-node open-loop coherent distributed communication system and evaluate its performance by transmitting QPSK , 64-, and 256-QAM constellations at a symbol rate of 2 MBd over a 58 m link in an urban environment. The system is implemented in a distributed manner with on-node processing using software-defined radios (SDRs) and wireless internode communication to share coordination information and does not rely on external time or frequency references such as the global navigation satellite system (GNSS). In each experiment ~100 messages were transmitted and a mean coherent gain of 0.936 was achieved across all measurements with a mean symbol error ratio of below 1.4e10^−4 achieved up to 64-QAM, demonstrating a reliable bandwidth of up to 12 Mbps.},
   arxiv = {2506.13014},
+  abbr = {Preprint},
 }
 
 
