Added AP-S/URSI to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,19 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{merlo2025apsursi,
+	abbr = {IEEE AP-S/URSI},
+	abstract = {In recent years, a significant interest in wirelessly coordinated distributed antenna arrays has emerged due to their unique benefits they can provide to communication and remote sensing applications. Due to the distributed nature of these arrays, they are inherently scalable, allowing elements to join and leave the array in an ad-hoc manner, providing robustness to element failure, as well as the ability to be reconfigured during operation to provide more favorable beam patterns for a given frequency or mode of operation. While wirelessly coordinated distributed phased arrays (DPAs) will be an enabling technology, the challenge of efficient electrical state coordination of each array element remains open, requiring each element to be coordinated to a fraction of the carrier wavelength to ensure high levels of coherence to support beamforming. While fine coordination impairments may be corrected on the receive side a posteriori given sufficient computational power, transmit beamforming requires all elements’ electrical states to be aligned prior to transmission to achieve coherent summation of transmitted waveforms in the desired directions, necessitating real-time wireless coordination. In this work we demonstrate the application of a fully digital wirelessly coordinated DPA for collaborative beamforming by building on previous work developing a computationally efficient fully digital wireless high-accuracy time synchronization technique (S. Prager, M. S. Haynes, and M. Moghaddam, IEEE Trans. Microw. Theory Tech.s, vol. 68, no. 11, pp. 4787–4804, 2020.; J. M. Merlo, S. R. Mghabghab, and J. A. Nanzer, IEEE Trans. Microw. Theory Tech., vol. 71, pp. 1720–1731, Dec. 2022.). While previous works have demonstrated beamforming using fully-wirelessly coordinated DPAs, they have relied on global navigation satellite system (GNSS)-based, or ad-hoc, continuous analog frequency references for frequency alignment. More recently, a fully digital coordination technique for DPAs was demonstrated using a pulsed single tone spectral estimation technique enabling decentralized frequency estimation (R. H. Kenney and J. W. McDaniel, 2024 IEEE/MTT-S IMS 2024, pp. 493–496, 2024.); however, this is the first demonstration known to the authors using a high-accuracy time-based technique to estimate and compensate for time, frequency, and phase offsets simultaneously at the carrier wavelength, without using direct spectral estimation, simplifying the estimation process, and eliminating the possibility of ambiguity when compared with carrier phase-based tracking techniques. Furthermore, due to the simplicity and efficiency of the algorithm, the entire process may be performed using off the shelf software-defined radios (SDRs) and all necessary processing is performed on commodity general purpose desktop processors without requiring acceleration using specialized graphics processing units (GPUs) or field-programmable gate arrays (FPGAs).},
+	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	bibtex_show = {true},
+	booktitle = {2025 IEEE International Symposium on Antennas and Propagation and INC/USNC-URSI Radio Science Meeting (AP-S/INC-USNC-URSI)},
+	month = {July},
+	pages = {1-2},
+	pdf = {2025_ursi_abstract_digital_beamforming.pdf},
+	slides = {2025_aps_ursi_slides.pdf},
+	title = {All-Digital Wirelessly Coordinated Phased Array Collaborative Beamforming Using High Accuracy Time Synchronization},
+	year = {2025}}
+
 @article{merlo2025real,
   title={Real-Time High-Accuracy Digital Wireless Time, Frequency, and Phase Calibration For Coherent Distributed Antenna Arrays},
   author={Merlo, Jason M and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
